--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/mu.png" type="image/x-png">
+    <link id='vjp' rel="shortcut icon" href="./assets/images/vjp.jpg" type="image/x-png">
     <title>Portfolio | Nghiem Xuan Truong</title>
 </head>
 <body oncontextmenu="return false">
@@ -63,7 +63,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/mu.png" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/vjp.jpg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -197,11 +197,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Self Employed</h2>
+          <h2>Fresher Developer</h2>
         </div>
         <div class="desc">
             <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <p>Oct 2023 - 2024</p>
         </div>
       </div>
     </div>
@@ -209,11 +209,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Intern SamSung</h2>
         </div>
         <div class="desc">
             <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <p>June 2024 - Dec 2024</p>
         </div>
       </div>
     </div>
@@ -225,7 +225,7 @@
         </div>
         <div class="desc">
             <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <p>May 2023 - June 2024</p>
         </div>
       </div>
     </div>
@@ -237,7 +237,7 @@
         </div>
         <div class="desc">
             <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <p>April 2024 - May 2024</p>
         </div>
       </div>
     </div>
@@ -249,23 +249,11 @@
         </div>
         <div class="desc">
             <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <p>April 2023 - April 2025</p>
         </div>
       </div>
     </div>
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
